# m365-agents-sdk-example

./: CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json  sample-run.txt
evals/: golden.json  run.py
examples/: manifest-walkthrough.md  teams_helpdesk.py
src/m365_agents_example/: __init__.py  agent.py  cli.py  connectors.py  handlers.py  manifest.py
tests/: test_agent.py  test_handlers.py  test_manifest.py
